# ScrapPY

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  ScrapPY.py  pyproject.toml  requirements.txt
src/: ScrapPY.py
