[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# https://peps.python.org/pep-0621/
[tool.poetry]
authors = ["RoseSecurity <rosesecurityresearch@proton.me"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License"
]
description = "ScrapPY is a Python utility for scraping manuals, documents, and other sensitive PDFs to generate targeted wordlists that can be utilized by offensive security tools to perform brute force, forced browsing, and dictionary attacks." 
license = "Apache-2.0"
version = "0.1.2"

name = "ScrapPY"
packages = [
  {include = "ScrapPY"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scipy = ">=1.13,<1.14"
pandas = ">= 2.2,<2.3"
PyPDF2 = ">=3.0,<3.1"
textract = ">=1.6,<1.7"

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
pylint = "3.2.5"

[tool.poetry.urls]
"Changelog" = "https://github.com/RoseSecurity/ScrapPY/releases"
"Documentation" = "https://github.com/RoseSecurity/ScrapPY/main/tree/docs"
"Homepage" = "https://github.com/RoseSecurity/ScrapPY"
"Issue tracker" = "https://github.com/RoseSecurity/ScrapPY/issues"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]
